--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "moovin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,16 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "vercel-build": "npm run build",
-    "homepage":"."
+    "preview": "vite preview"
   },
   "dependencies": {
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^144.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
