--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moovin",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm run build",
+    "homepage": "."
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.9.1",
+    "aws-amplify": "^6.12.2",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^144.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
